--- a/springboot/src/main/resources/templates/welcome.html
+++ b/springboot/src/main/resources/templates/welcome.html
@@ -8,30 +8,40 @@
 <html lang="zh">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="/js/jquery1.8.3.js"></script>
-    <script src="/js/ajax.js"></script>
     <title>Title</title>
 </head>
 <body>
 <h1>Welcome</h1>
 <ul>
     <li>
-        <a href="template">template</a>
+        <a href="/template">template</a>
     </li>
     <li>
-        <a href="modules/fastdfs">FastDFS</a>
+        <a href="/modules/fastdfs">FastDFS</a>
     </li>
     <li>
-        <a href="modules/mail">mail</a>
+        <a href="/modules/mail">mail</a>
     </li>
     <li>
-        <a href="modules/redis">redis</a>
+        <a href="/modules/redis">redis</a>
     </li>
     <li>
-    <a href="modules/elasticsearch">elasticsearch</a>
-</li>
+        <a href="/modules/elasticsearch">elasticsearch</a>
+    </li>
     <li>
-        <a href="modules/rabbitmq">rabbitmq</a>
+        <a href="/modules/rabbitmq">rabbitmq</a>
+    </li>
+    <li>
+        <a href="/modules/ajax">ajax</a>
+    </li>
+
+
+    <br>
+    <li>
+        <a href="/login">login</a>
+    </li>
+    <li>
+        <a href="/logout">logout</a>
     </li>
 </ul>
 </body>
