--- a/springboot/src/main/resources/templates/modules/redis.html
+++ b/springboot/src/main/resources/templates/modules/redis.html
@@ -7,7 +7,7 @@
     <script src="/js/common.js"></script>
     <script src="/js/modules/redis.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/common.css">
-    <title>mail.html</title>
+    <title>redis</title>
 </head>
 <body>
 
