--- a/springboot/src/main/resources/templates/template.html
+++ b/springboot/src/main/resources/templates/template.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="/js/common.js"></script>
     <link type="text/css" rel="stylesheet" href="/css/common.css"></link>
-    <title>Title</title>
+    <title>template</title>
 </head>
 <body>
 
