--- a/springboot/src/main/resources/templates/welcome.html
+++ b/springboot/src/main/resources/templates/welcome.html
@@ -8,7 +8,7 @@
 <html lang="zh">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Title</title>
+    <title>Welcome</title>
 </head>
 <body>
 <h1>Welcome</h1>
