--- a/springboot/src/main/resources/templates/modules/ajax.html
+++ b/springboot/src/main/resources/templates/modules/ajax.html
@@ -1,17 +1,18 @@
 <!--  @author panqt 2019/03/22 17:44  -->
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="/js/jquery1.8.3.js"></script>
-    <script src="/js/ajax.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/common.css">
+    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/modules/ajax.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <title>ajxa</title>
 </head>
 <body>
-<div class="background">
+<div class="background" xmlns:th="http://www.thymeleaf.org">
 <div class="header">
-    <div class="title img"><a href="/welcome"><img src="/img/logo.jpg"/></a> </div>
+    <div class="title img"><a th:href="@{/welcome}"><img th:src="@{/img/logo.jpg}"/></a> </div>
     <div class="title text">Ajax</div>
 
     <div class="login-info">描述</div>
