--- a/springboot/src/main/resources/templates/modules/elasticsearch.html
+++ b/springboot/src/main/resources/templates/modules/elasticsearch.html
@@ -1,19 +1,19 @@
 <!--  @auther panqt 2019/03/21 17:54  -->
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="/js/jquery1.8.3.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/modules/elasticsearch.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/common.css">
+    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/modules/elasticsearch.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <title>elasticsearch</title>
 </head>
 <body>
 <div class="background">
 
     <div class="header">
-        <div class="title img"><a href="/welcome"><img src="/img/logo.jpg"/></a> </div>
+        <div class="title img"><a th:href="@{/welcome}"><img th:src="@{/img/logo.jpg}"/></a> </div>
         <div class="title text">ElasticSearch</div>
 
         <div class="login-info">描述</div>
