--- a/springboot/src/main/resources/templates/modules/rabbitmq.html
+++ b/springboot/src/main/resources/templates/modules/rabbitmq.html
@@ -1,12 +1,12 @@
 <!--  @auther panqt 2019/03/22 2:56  -->
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="/js/jquery1.8.3.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/modules/rabbitmq.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/common.css">
+    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/modules/rabbitmq.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <title>rabbitmq</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 <div class="background">
 
     <div class="header">
-        <div class="title img"><a href="/welcome"><img src="/img/logo.jpg"/></a> </div>
+        <div class="title img"><a th:href="@{/welcome}"><img th:src="@{/img/logo.jpg}"/></a> </div>
         <div class="title text">Rabbitmq</div>
 
         <div class="login-info">描述</div>
