--- a/springboot/src/main/resources/templates/template.html
+++ b/springboot/src/main/resources/templates/template.html
@@ -1,11 +1,11 @@
 <!--  @auther panqt 2019/03/20 3:29  -->
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="/js/common.js"></script>
-    <link type="text/css" rel="stylesheet" href="/css/common.css"></link>
+    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/common.css}"></link>
     <title>template</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 <div class="background">
 
     <div class="header">
-        <div class="title img"><a href="/welcome"><img src="/img/logo.jpg"/></a> </div>
+        <div class="title img"><a th:href="@{/welcome}"><img th:src="@{/img/logo.jpg}"/></a> </div>
         <div class="title text">标题</div>
         <div class="description">描述</div>
         <div class="description">描述</div>
