--- a/springboot/src/main/resources/templates/modules/fastdfs.html
+++ b/springboot/src/main/resources/templates/modules/fastdfs.html
@@ -3,7 +3,7 @@
 <html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/modules/fastdfs.base64.js}"></script>
     <script th:src="@{/js/modules/fastdfs.js}"></script>
@@ -31,7 +31,7 @@
             <div class="text">Multipart上传</div>
             <input id="upload-mu" type="button" value="Multipart上传图片"/>
         </div>
-        <div class="content"><img id="img" src="\" width="320px" height="220px" alt=""></div>
+        <div class="content"><img id="img" width="320px" height="220px" alt=""></div>
     </div>
 
     <div class="box">
