--- a/springboot/src/main/resources/templates/modules/rabbitmq.html
+++ b/springboot/src/main/resources/templates/modules/rabbitmq.html
@@ -3,7 +3,7 @@
 <html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script th:src="@{/js/jquery1.8.3.js}"></script>
+    <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/modules/rabbitmq.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
