--- a/springboot/src/main/resources/templates/welcome.html
+++ b/springboot/src/main/resources/templates/welcome.html
@@ -38,7 +38,7 @@
 
     <br>
     <li>
-        <a th:href="@{/login}">login</a>
+        <a th:href="@{/modules/login}">login</a>
     </li>
     <li>
         <a th:href="@{/logout}">logout</a>
