--- a/springboot/src/main/resources/templates/modules/login.html
+++ b/springboot/src/main/resources/templates/modules/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <script src="https://code.jquery.com/jquery-1.8.3.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/modules/login.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <title>login</title>
 </head>
@@ -27,10 +28,10 @@
             <div class="text">Login</div>
         </div>
         <div class="content">
-            <form id="from" action="auth" method="get">
+            <form id="from">
                 账户：<input name="account" type="text" value="account"><br>
                 密码：<input name="password" type="password" value="password">
-                <input type="submit" id="login" value="login"/>
+                <input type="button" id="login" value="login"/>
             </form>
         </div>
     </div>
