--- a/springboot/src/main/resources/templates/welcome.html
+++ b/springboot/src/main/resources/templates/welcome.html
@@ -14,7 +14,7 @@
 <h1>Welcome</h1>
 <ul>
     <li>
-        <a th:href="@{/template}">template</a>
+        <a th:href="@{/modules/template}">template</a>
     </li>
     <li>
         <a th:href="@{/modules/fastdfs}">FastDFS</a>
